# project_ai_template2

./: .dockerignore  .envexample  Dockerfile  README.md  docker-compose.yml  pyproject.toml
